feat: 增加更新用户信息接口 && 增加errors模块
